--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "webpack-dev-server --devtool eval --progress --hot --content-base app",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "compare-versions": "^3.1.0"
+  },
   "devDependencies": {
     "babel-core": "6.x",
     "babel-eslint": "7.x",
