--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sn-prolink",
-  "version": "1.0.0",
+  "version": "1.0.01",
   "main": "dist/dist.js",
   "scripts": {
     "lint": "eslint --cache --ignore-path .gitignore --ext .jsx,.js --format=node_modules/eslint-formatter-pretty .",
@@ -9,10 +9,8 @@
     "start": "webpack-dev-server --devtool eval --progress --hot --content-base app",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
-  "dependencies": {
-    "compare-versions": "^3.1.0"
-  },
   "devDependencies": {
+    "compare-versions": "^3.1.0",
     "babel-core": "6.x",
     "babel-eslint": "7.x",
     "babel-loader": "6.x",
