--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sn-prolink",
-  "version": "1.0.1",
+  "name": "sn-extensions-manager",
+  "version": "1.0.0",
   "main": "dist/dist.js",
   "scripts": {
     "lint": "eslint --cache --ignore-path .gitignore --ext .jsx,.js --format=node_modules/eslint-formatter-pretty .",
