--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "style-loader": "~0.13.1",
     "validate-commit-msg": "2.x",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.9.7",
+    "sn-stylekit": "^1.0.117"
   }
 }
