--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sn-extensions-manager",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "main": "dist/dist.js",
   "scripts": {
     "lint": "eslint --cache --ignore-path .gitignore --ext .jsx,.js --format=node_modules/eslint-formatter-pretty .",
@@ -13,28 +13,21 @@
     "main": "dist/index.html"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "@babel/runtime": "^7.4.4",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-register": "^6.26.0",
     "compare-versions": "^3.1.0",
-    "babel-core": "6.x",
-    "babel-eslint": "7.x",
-    "babel-loader": "6.x",
-    "babel-plugin-transform-runtime": "6.x",
-    "babel-preset-es2015": "6.x",
-    "babel-preset-react": "6.x",
-    "babel-preset-stage-0": "6.x",
-    "babel-runtime": "6.x",
-    "commitizen": "^2.9.3",
-    "conventional-changelog-cli": "1.x",
-    "copy-webpack-plugin": "latest",
+    "copy-webpack-plugin": "4.6.0",
     "css-loader": "~0.28.7",
-    "cz-conventional-changelog": "^1.2.0",
-    "eslint": "latest",
-    "eslint-config-airbnb": "latest",
-    "eslint-formatter-pretty": "^1.1.0",
-    "eslint-plugin-compat": "^1.0.0",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsx-a11y": "3.x",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "latest",
     "extract-text-webpack-plugin": "^3.0.2",
     "husky": "^0.12.0",
     "node-sass": "^4.6.0",
@@ -42,11 +35,10 @@
     "react": "16.x",
     "react-dom": "16.x",
     "sass-loader": "^6.0.6",
-    "sn-components-api": "1.2.2",
+    "sn-components-api": "1.2.4",
+    "sn-stylekit": "2.0.14",
     "style-loader": "~0.13.1",
-    "validate-commit-msg": "2.x",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.7",
-    "sn-stylekit": "2.0.13"
+    "webpack-dev-server": "^2.9.7"
   }
 }
