--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sn-extensions-manager",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "main": "dist/dist.js",
   "scripts": {
     "lint": "eslint --cache --ignore-path .gitignore --ext .jsx,.js --format=node_modules/eslint-formatter-pretty .",
@@ -21,22 +21,20 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/runtime": "^7.4.4",
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.6.4",
     "babel-loader": "^8.0.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.26.0",
     "compare-versions": "^3.1.0",
     "copy-webpack-plugin": "4.6.0",
-    "css-loader": "~0.28.7",
+    "css-loader": "~3.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "husky": "^0.12.0",
     "node-sass": "^4.6.0",
-    "open-browser-webpack-plugin": "0.0.3",
     "react": "16.x",
     "react-dom": "16.x",
     "sass-loader": "^6.0.6",
-    "sn-components-api": "1.2.4",
-    "sn-stylekit": "2.0.14",
+    "sn-components-api": "1.2.8",
+    "sn-stylekit": "2.0.15",
     "style-loader": "~0.13.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.7"
