--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "sn-extensions-manager",
   "version": "1.2.4",
+  "engines": {
+    "node": ">=10.20.1 <12.0"
+  },
   "main": "dist/dist.js",
   "scripts": {
     "lint": "eslint --cache --ignore-path .gitignore --ext .jsx,.js --format=node_modules/eslint-formatter-pretty .",
