--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sn-extensions-manager",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "engines": {
-    "node": ">=10.20.1 <12.0"
+    "node": ">=10.20.1 <=15.14.0"
   },
   "main": "dist/dist.js",
   "scripts": {
